# luanvan-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
deploy/: docker-compose.yml
server/: conftest.py  settings.py
server/config/: __init__.py  logging.py  milvusdb.py  mongodb.py  socketio.py  websocket.py
server/constants/: common.py
server/services/: auth.py  file_service.py  openai_service.py
server/stores/file/: b637543d-0943-4916-9e2e-02cb8742fd48.docx  c92e3b50-33ad-499f-82c3-a45d0cceb15a.txt
server/tests/: test.py  test_query_milvusdb.py
server/types/: common.py
server/web/: application.py
server/web/api/: router.py
server/web/api/admin/: __init__.py  schema.py  views.py
server/web/api/bot/: __init__.py  schema.py  views.py
server/web/api/chat_history/: __init__.py  schema.py  service.py  views.py
server/web/api/file/: __init__.py  schema.py  views.py
server/web/api/notification/: __init__.py  schema.py  service.py  views.py
server/web/api/package/: __init__.py  schema.py  views.py
server/web/api/token/: __init__.py  views.py
server/web/api/user/: __init__.py  schema.py  views.py
